--- a/springboot/demo/pom.xml
+++ b/springboot/demo/pom.xml
@@ -87,6 +87,14 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
+		<!--Libreria para leer archivo .env-->
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>java-dotenv</artifactId>
+			<version>5.2.2</version>
+		</dependency>
+
+
 	    <!-- ⚠️ Repetida: spring-boot-starter-test aparece dos veces -->
 		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
